fixed positioning and size of the "add shift" container

--- a/css/app.css
+++ b/css/app.css
@@ -118,8 +118,13 @@
     margin-bottom: 10px;
 }
 
+.row .shiftadd-container {
+    padding: 0;
+}
+
 .row .shiftadd {
-    position: absolute;
+    position: relative;
+    width: 100%;
     left: 0;
     top: 10px;
 }
